# web-framework-benchmark

./: .dockerignore  .gitignore  ADDING_FRAMEWORK.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.wrkr  README.md  cspell.config.yaml  docker-compose.yml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: benchmark_methodology.md  bug_report.md
.github/copilot/: benchmarks.md  config-docs.md  pr-handoff.md  rust-workspace.md  ui-templates.md  verification.md
.github/scripts/: ci_parse_tests.py
.github/workflows/: docker-publish.yml  reusable-benchmark-test.yml  test-c-benchmark.yml  test-cpp-benchmark.yml  test-csharp-benchmark.yml  test-go-benchmark.yml  test-java-benchmark.yml  test-javascript-benchmark.yml  test-js-benchmark.yml  test-kotlin-benchmark.yml  test-lua-benchmark.yml  test-python-benchmark.yml  test-rust-benchmark.yml
benchmarks/: README.md
benchmarks/cpp/grpc-callback/: CMakeLists.txt  server.cc
benchmarks/rust/actix-diesel-postgres/: Cargo.toml  Dockerfile
benchmarks/rust/actix-diesel-postgres/src/: main.rs  models.rs
benchmarks/rust/actix-sqlx-postgres/: Cargo.toml  Dockerfile
benchmarks/rust/actix-sqlx-postgres/src/: main.rs
benchmarks/rust/actix-web/: Cargo.toml  Dockerfile
benchmarks/rust/actix-web/src/: main.rs
benchmarks/rust/axum/: Cargo.toml  Dockerfile
benchmarks/rust/axum-diesel-postgres/: Cargo.toml  Dockerfile
benchmarks/rust/axum-diesel-postgres/src/: main.rs  schema.rs
benchmarks/rust/axum-sqlx-postgres/: Cargo.toml  Dockerfile
benchmarks/rust/axum-sqlx-postgres/src/: main.rs
benchmarks/rust/axum/src/: main.rs
benchmarks/rust/tonic/: Cargo.toml  Dockerfile  build.rs
benchmarks/rust/tonic/src/: main.rs
benchmarks_db/: Dockerfile  README.md  init.sql
benchmarks_db/mariadb/: Dockerfile  init.sql  max-connections.cnf
benchmarks_db/mongodb/: Dockerfile  init.js
benchmarks_db/mssql/: Dockerfile  check_ready.sh  entrypoint.sh  init.sql
benchmarks_db/mysql/: Dockerfile  init.sql  max-connections.cnf
benchmarks_db/pg/: Dockerfile  init.sql
config/: benchmarks.yaml  environment.local.yaml  frameworks.yaml  languages.yaml
config/benchmarks/: c.yaml  cpp.yaml  csharp.yaml  elixir.yaml  go.yaml  java.yaml  javascript.yaml  kotlin.yaml  lua.yaml  php.yaml  python.yaml  ruby.yaml  rust.yaml
config/environments/: dell_r640.yaml  local.yaml
docs/: ARCHITECTURE.md  FAQ.md  GUIDE_ADDING_BENCHMARKS.md  METHODOLOGY.md  UI_GUIDE.md
scripts/: .luarc.json  README.md  db_complex_read_spec.md  json_aggregate_spec.md  wfb_db_complex.lua  wfb_grpc_aggregate.lua  wfb_json_aggregate.lua  wfb_plaintext.lua  wfb_static_files.lua  wrk_db_read_one.lua  wrk_db_read_one_mongo.lua  wrk_db_read_paging.lua  wrk_db_read_paging_mongo.lua  wrk_db_write.lua  wrk_db_write_mongo.lua  wrk_hello.lua  wrk_json.lua  wrk_static_files.lua  wrk_static_files_large.lua  wrk_static_files_medium.lua  wrk_static_files_small.lua  wrk_tweet_service.lua  wrk_tweet_service_mongo.lua  wrkr_db_complex.lua  wrkr_grpc_aggregate.lua  wrkr_json_aggregate.lua  wrkr_plaintext.lua  wrkr_static_files.lua
scripts/lib/: wfb.lua
src/: analysis.rs  analysis_context.rs  benchmark.rs  cli.rs  database.rs  docker.rs  error.rs  exec_utils.rs  http.rs  http_probe.rs  main.rs  parsers.rs  wrk.rs
web-app/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
wfb-runner/: Cargo.toml
wfb-runner/src/: benchmark_data.rs  cli.rs  consts.rs  db_config.rs  main.rs  pipeline.rs  run.rs  verify.rs
wfb-runner/src/docker/: command.rs  mod.rs
wfb-runner/src/exec/: local.rs  mod.rs  ssh.rs
wfb-runner/src/runner/: benchmark.rs  build.rs  database.rs  mod.rs
wfb-server/: Cargo.toml  build.rs  build_support.rs  tailwind.config.js
wfb-server/assets/src/css/: app.css
wfb-server/assets/src/js/: bench-charts.js  bench.js  env-spec-panel.js  icons.js
wfb-server/src/: api_models.rs  assets_manifest.rs  file_watcher.rs  filters.rs  main.rs  middleware.rs  public_url.rs  routes.rs  state.rs  view_models.rs
wfb-server/src/handlers/: api.rs  common.rs  mod.rs  web.rs
wfb-server/src/handlers/web/: bench.rs  bench_charts.rs  context.rs  github.rs  helpers.rs  index.rs  methodology.rs  mod.rs  render.rs  seo.rs  types.rs
wfb-server/templates/: README.md
wfb-server/templates/components/: env-spec-panel.rs.j2  footer.html.j2  footer.rs.j2  header.html.j2  header.rs.j2  sidebar.html.j2  sidebar.rs.j2  table.html.j2  table.rs.j2  toolbar.html.j2  toolbar.rs.j2
wfb-server/templates/components/bench/: charts.html.j2  charts.rs.j2  compare.html.j2  delta.html.j2  detail-card.html.j2  detail-card.rs.j2  empty.html.j2  empty.rs.j2  scripts.html.j2
wfb-server/templates/components/header/: brand.html.j2  brand.rs.j2  env-switcher.html.j2  env-switcher.rs.j2  github-link.html.j2  github-link.rs.j2  github-stars.rs.j2  methodology-link.html.j2  methodology-link.rs.j2  mini-nav.rs.j2  test-nav.html.j2  test-nav.rs.j2
wfb-server/templates/components/menus/: env-menu.rs.j2  run-menu.rs.j2  test-menu.rs.j2
wfb-server/templates/components/table/: empty.html.j2  empty.rs.j2  list.html.j2  list.rs.j2  row.html.j2  row.rs.j2
wfb-server/templates/components/tabs/: test-tabs.rs.j2
wfb-server/templates/layouts/: base.html.j2  base.rs.j2
wfb-server/templates/pages/: bench.html.j2  bench.rs.j2  index.html.j2  index.rs.j2  methodology.html.j2  methodology.rs.j2
wfb-server/templates/partials/: head-assets.html.j2  head-assets.rs.j2  meta.html.j2  meta.rs.j2  scripts.html.j2
wfb-server/templates/partials/bench/: charts.rs.j2
wfb-server/templates/partials/htmx/: macros.rs.j2
wfb-server/templates/partials/index/: results.rs.j2  update.rs.j2
wfb-server/templates/partials/ui/: macros.rs.j2
wfb-storage/: Cargo.toml
wfb-storage/src/: benchmark.rs  config.rs  environment.rs  error.rs  framework.rs  lang.rs  lib.rs  storage.rs  testcase.rs
wrkr/: Cargo.toml
wrkr-api/: Cargo.toml
wrkr-core/: Cargo.toml
wrkr-core/src/: error.rs  lib.rs  lua_env.rs  pb_utils.rs  response.rs  runner.rs  stats.rs
wrkr/src/: cli.rs  main.rs
(+561 files in other folders)
