[workspace]
resolver = "3"
members = [
    "wfb-runner",
    "wfb-storage",
    "wrkr",
    "wrkr-core",
    "wrkr-api",
    "wfb-server",
]

[workspace.package]
version = "0.8.0"
edition = "2024"
authors = ["Andrew Sumskoy <getansum@nogc.io>"]
license = "MIT"
homepage = "https://webbenchmark.nogc.io"
repository = "https://github.com/nogcio/web-framework-benchmark"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# panic = "abort"
strip = true
