[workspace]
resolver = "3"
members = [
    "wfb-runner",
    "wfb-storage",
    "wrkr",
    "wrkr-core",
    "wrkr-api",
    "wfb-server",
]

[workspace.package]
version = "0.8.2"
edition = "2024"
authors = ["Andrew Sumskoy <getansum@nogc.io>"]
license = "MIT"
homepage = "https://wfb.nogc.io"
repository = "https://github.com/nogcio/web-framework-benchmark"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# panic = "abort"
strip = true
