[package]
name = "wfb-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-routing"] }
tokio = { version = "1.8", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = [
    "fs",
    "trace",
    "cors",
    "compression-gzip",
    "compression-br",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["io"] }
clap = { version = "4.5", features = ["derive", "env"] }
wfb-storage = { path = "../wfb-storage" }
notify = "6.1"
askama = { version = "0.15.1", features = ["serde_json"] }
mime_guess = "2.0.5"
urlencoding = "2.1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rand = "0.8"

[build-dependencies]
anyhow = "1.0"
blake3 = "1.5"
serde_json = "1.0"
walkdir = "2.5"
