[package]
name = "wfb-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

serde_yaml = "0.9"
walkdir = "2"
thiserror = "2"
chrono = { version = "0.4.42", features = ["serde"] }
