[package]
name = "wrkr-core"
version.workspace = true
description = "Core library for wrkr"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.8", features = ["sync", "io-util", "rt-multi-thread", "time", "fs"] }
mlua = {version = "0.11.5", features = ["luajit", "send", "serialize", "async", "macros"]}

reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls", "http2", "charset"] }
bytes = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

thiserror = "2.0.17"
dashmap = "6.1.0"
csv = "1.4.0"
rand = "0.9.2"
hdrhistogram = "7.5.4"
