[package]
name = "wrkr"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
wrkr-core = { path = "../wrkr-core" }
tokio = { version = "1.8", features = ["rt-multi-thread", "time", "fs", "macros"] }
clap = {version = "4.5.53", features = ["derive", "env"]}
thiserror = "2.0.17"
indicatif = "0.18.3"
humanize-bytes = "1.0.6"
hdrhistogram = "7.5.4"
textplots = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
wrkr-api = { version = "0.1.0", path = "../wrkr-api" }
