[package]
name = "wfb-rust-actix-diesel-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "serde_json"] }
r2d2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
mimalloc = "0.1.48"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
