[package]
name = "wfb-rust-actix-sqlx-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["macros", "rt"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
mimalloc = "0.1.48"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
