[package]
name = "wfb-rust-actix-web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-files = "0.6.9"
mimalloc = "0.1.48"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
