[package]
name = "wfb-rust-axum-diesel-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
diesel = { version = "2.3.5", features = ["postgres", "r2d2", "chrono", "serde_json"] }
r2d2 = "0.8"
chrono = { version = "0.4.42", features = ["serde"] }
mimalloc = "0.1.48"
log = "0.4.29"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
