[package]
name = "wfb-rust-axum-sqlx-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = { version = "0.4.42", features = ["serde"] }
mimalloc = "0.1.48"
sha2 = "0.10.9"
hex = "0.4.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
log = "0.4.29"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
