[package]
name = "wfb-rust-axum"
version = "0.8.8"
edition = "2024"

[dependencies]
axum = "0.8.8"

tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.228"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
chrono = { version = "0.4.42", features = ["serde"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["request-id", "util"] }
