[package]
name = "wfb-rust-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tower-http = { version = "0.6.8", features = ["fs"] }
tokio-util = { version = "0.7.17", features = ["io"] }
mimalloc = "0.1.48"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
