[workspace]

[package]
name = "wfb-rust-tonic"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.14.2", features = ["gzip", "transport"] }
tonic-prost = "0.14.2"
tonic-health = "0.14.2"
prost = "0.14.3"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"
mimalloc = "0.1.48"
rustc-hash = "2.0"

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
